Creado mediante Colaboratory

--- a/Páginas_de_utilidad.ipynb
+++ b/Páginas_de_utilidad.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Páginas de utilidad.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMLQnOC7hqImiOr5COBg6NF",
+      "authorship_tag": "ABX9TyPs8sCtoi/qEgVFPa6IfgqH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "\n",
         "<hr>\n",
         "\n",
-        "## - [REMOVE.BG](https://www.remove.bg/upload)\n",
+        "# - [REMOVE.BG](https://www.remove.bg/upload)\n",
         "###Permite remover el fondo de cualquier imagen\n",
         "\n",
         "\n"
@@ -48,7 +48,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#[unsplash.com](unsplash.com)\n",
+        "#[UNSPLASH.COM](unsplash.com)\n",
         "\n",
         "##Permite obtener imágenes gratuitas en alta calidad :)"
       ]
@@ -63,6 +63,18 @@
         "#[ILOVEPDF](https://www.ilovepdf.com/es/pdf_a_word)\n",
         "\n",
         "##Permite transformar un pdf a un word editable :)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GGMASYPPnfCg",
+        "colab_type": "text"
+      },
+      "source": [
+        "#[VENNGAGE](https://es.venngage.com/)\n",
+        "\n",
+        "##Permite crear infografías con variados temas de forma gratuita _)"
       ]
     }
   ]
